Trying to correct visual problems on mobile device

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,7 @@ span{
 }
 @media screen and (max-width: 700px){
     html{
-        font-size: 90%;
+        font-size: 70%;
     }
 }
 @media screen and (max-width: 480px){
