--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -23,6 +23,12 @@
                 font-weight: 500;
             }
         }
+        @media screen and (max-width: 710px) {
+            .right-items p {
+                font-size: 1.2rem;
+            }
+        }
+        
     }
 }
 
